Added 'The Future' font setup and updated theme configuration

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,3 +1,69 @@
+@font-face {
+  font-family: 'The Future';
+  src: url('/src/assets/fonts/the-future-light.woff2') format('woff2');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'The Future';
+  src: url('/src/assets/fonts/the-future-light-italic.woff2') format('woff2');
+  font-weight: 300;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'The Future';
+  src: url('/src/assets/fonts/the-future-regular.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'The Future';
+  src: url('/src/assets/fonts/the-future-italic.woff2') format('woff2');
+  font-weight: 400;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'The Future';
+  src: url('/src/assets/fonts/the-future-medium.woff2') format('woff2');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'The Future';
+  src: url('/src/assets/fonts/the-future-medium-italic.woff2') format('woff2');
+  font-weight: 500;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'The Future';
+  src: url('/src/assets/fonts/the-future-bold.woff2') format('woff2');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'The Future';
+  src: url('/src/assets/fonts/the-future-bold-italic.woff2') format('woff2');
+  font-weight: 700;
+  font-style: italic;
+  font-display: swap;
+}
+
+
+
 html {
   @apply text-base-sm md:text-base;
 }
