--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,9 @@ const homepage = await getListPage("homepage", "-index");
 const call_to_action = await getListPage("ctaSection", "call-to-action");
 const testimonial = await getListPage("testimonialSection", "testimonial");
 
+
 const { banner, features } = homepage.data;
+console.log("Banner data:", banner);
 ---
 
 <Base>
@@ -24,11 +26,11 @@ const { banner, features } = homepage.data;
             set:html={markdownify(banner.title)}
             class="mb-4 text-h3 lg:text-h1"
           />
-          <p set:html={markdownify(banner.content)} class="mb-8" />
+          <h5 set:html={markdownify(banner.content)} class="mb-8" />
           {
             banner.button.enable && (
               <a
-                class="btn btn-primary"
+                class="btn btn-primary btn-lg"
                 href={banner.button.link}
                 target={
                   banner.button.link.startsWith("http") ? "_blank" : "_self"
@@ -39,6 +41,7 @@ const { banner, features } = homepage.data;
               </a>
             )
           }
+          <p set:html={markdownify(banner.button.subtitle)} class="mb-8" />
         </div>
         {
           banner.image && (
