--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -64,21 +64,24 @@ console.log("Banner data:", banner);
   <!-- Features -->
   {
     features.map((feature, index: number) => (
-      <section class={`section-sm ${index % 2 === 0 && "bg-gradient"}`}>
+      <section class={`section-sm relative overflow-visible ${index % 2 === 0 && "bg-gradient"}`}>
         <div class="container">
           <div class="row items-center justify-between">
-            <div 
-              class={`mb:md-0 mb-6 md:col-5 ${feature.image_side === "right" && "md:order-2"}`}
+            <div
+              class={`mb:md-0 mb-6 md:col-7 relative right-0 md:absolute md:inset-y-0 md:right-0 md:w-1/2 
+                flex items-center justify-center 
+                ${feature.image_side === "right" && "md:order-2"}`}
             >
               <ImageMod
                 src={feature.image}
-                height={500}
-                width={600}
+                height={1500}
+                width={1600}
                 alt={feature.title}
+                class="w-full h-auto object-contain"
                 format="webp"
               />
             </div>
-            <div class={`md:col-7 lg:col-6 ${index % 2 !== 0 && "md:order-1"}`}>
+            <div class={`md:col-5 lg:col-6 ${index % 2 !== 0 && "md:order-1"}`}>
               <h2 set:html={markdownify(feature.title)} class="mb-4" />
               <p set:html={markdownify(feature.content)} class="mb-8 text-lg" />
               <ul>
