--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -63,9 +63,9 @@ const { banner, features } = homepage.data;
   <!-- Features -->
   {
     features.map((feature, index: number) => (
-      <section class={`feature-scroll-section relative overflow-visible ${index % 2 === 0 && "bg-gradient"}`} style="min-height: 140vh;">
+      <section class={`feature-scroll-section relative overflow-visible ${index % 2 === 0 && "bg-gradient"}`} style="min-height: 100vh;">
         <div class="container">
-          <div class="row items-stretch justify-between" style="min-height: 140vh;">
+          <div class="row items-stretch justify-between" style="min-height: 100vh;">
             <div
               class={`feature-image mb:md-0 mb-6 md:col-7 relative right-0 md:absolute md:inset-y-0 md:right-0 md:w-1/2
                 flex items-center justify-center transition-opacity duration-300
@@ -82,7 +82,7 @@ const { banner, features } = homepage.data;
             </div>
             <div class={`md:col-5 lg:col-6 ${index % 2 !== 0 && "md:order-1"}`}>
               <div class="feature-text-container">
-                <div class="feature-text-wrapper transition-opacity duration-300">
+                <div class={`feature-text-wrapper transition-opacity duration-300 ${feature.image_side === "right" ? "text-on-left" : "text-on-right"}`}>
                   <h2 set:html={markdownify(feature.title)} class="mb-4" />
                   <p set:html={markdownify(feature.content)} class="mb-8 text-lg" />
                   <ul>
