--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -226,7 +226,7 @@ html {
   @apply prose-h2:text-h2-sm md:prose-h2:text-h2;
   @apply prose-h3:text-h3-sm md:prose-h3:text-h3;
   @apply prose-p:text-base prose-p:text-text dark:prose-p:text-darkmode-text;
-  @apply prose-a:text-text prose-a:[&.btn]:no-underline  dark:prose-a:text-darkmode-text;
+  @apply prose-a:[&:not(.btn)]:text-text prose-a:[&.btn]:no-underline dark:prose-a:[&:not(.btn)]:text-darkmode-text;
   @apply prose-img:max-w-full prose-img:rounded;
   @apply prose-strong:text-text-dark dark:prose-strong:text-darkmode-text;
   @apply prose-hr:border-border dark:prose-hr:border-darkmode-border;
