add styling for teams page, fix image filepaths for team and research

--- a/src/layouts/components/ContentCard.astro
+++ b/src/layouts/components/ContentCard.astro
@@ -32,7 +32,7 @@ const { title, image, date } = data.data;
   <ul class="mb-4">
     {date && <li class="inline-block">{dateFormat(date)}</li>}
   </ul>
-  <p class="mb-6">{plainify(data.body?.slice(0, Number(summary_length)))}</p>
+  <p class="mb-6">{plainify(data.body?.slice(0, Number(summary_length)) || "")}</p>
   <a class="btn btn-outline-primary btn-sm" href={`/${collection}/${data.id}`}>
     read more
   </a>
